--- a/css/style.css
+++ b/css/style.css
@@ -811,11 +811,13 @@ margin-bottom: 20px;
 {
 width: 45%;
 padding: 6px 25px;
+border: 0;
+margin-right: -5px;
 }
 
 .subscribe button
 {
-padding: 10px 15px;
+padding: 11px 15px;
 font-size: 10px;
 }
 }
@@ -850,6 +852,8 @@ margin-bottom: 20px;
 {
 width: 45%;
 padding: 9px 25px;
+border: 0;
+margin-right: -5px;
 }
 
 .subscribe button
